--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "author": "terrierscript <13282103+terrierscript@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
+    "@storybook/design-system": "^1.0.0",
     "@types/node": "^12.7.4",
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.8.5",
     "obniz": "^2.2.0",
     "parcel": "^1.12.3",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-hook-form": "^3.23.12",
     "styled-components": "^4.3.2",
     "typescript": "^3.5.3"
   },
